--- a/index.html
+++ b/index.html
@@ -240,6 +240,51 @@
                   <p>CEO of abcd</p>
         </div>
      </section>
+     <!-- contact section-->
+      <section class="contact">
+        <div class="contact-info">
+            <div class="first-info">
+                <h2>HOLI STORE</h2>
+
+                <p>noida sector 59 metro</p>
+                <p>9453684599</p>
+                <p>kushagragupta1789@gmail.com</p>
+
+                <div class="social-icon">
+                    <a href="#"><i class='bx bxl-facebook'></i></a>
+                    <a href="#"><i class='bx bxl-twitter' ></i></a>
+                    <a href="#"><i class='bx bxl-instagram' ></i></a>
+                    <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
+                </div>
+            </div>
+            <div class="second-info">
+                <h4>support</h4>
+                <p>Contact us</p>
+                <p>About Page</p>
+                <p>shopping & Returns</p>
+                <p>privacy</p>
+            </div>
+            <div class="third-info">
+                <h4>shop</h4>
+                <p> shopping</p>
+                <p>kids toys</p>
+                <p>holi Colors</p>
+            </div>
+
+            <div class="third-info">
+                <h4>company</h4>
+                <p>About</p>
+                <p>blog</p>
+                <p>login</p>
+            </div>
+
+        <div class="five">
+
+            <h4>Subscribe</h4>
+            <p>Any updates, Hot DEals,<br> Discount Sent br  in your Inbox Daily</p>
+        </div>
+        </div>
+      </section>
 
 </body>
 </html>
