--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
     ;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
-    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="
-    anonymous" referrerpolicy="no-referrer" />
-
+    
     <link rel="stylesheet"
   href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
@@ -29,7 +26,7 @@
 
    <nav>
     <header>
-       <div>
+       <div class="navmenue1">
         <h3>HOLI STORE</h3>
        </div>
        <ul class="navmenu">
@@ -264,12 +261,7 @@
                 <p>shopping & Returns</p>
                 <p>privacy</p>
             </div>
-            <div class="third-info">
-                <h4>shop</h4>
-                <p> shopping</p>
-                <p>kids toys</p>
-                <p>holi Colors</p>
-            </div>
+            
 
             <div class="third-info">
                 <h4>company</h4>
